--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "next": "13.0.7",
+    "pseudo-events": "^1.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
