--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@next/font": "13.0.7",
+    "@prisma/client": "^4.8.0",
+    "dotenv": "^16.0.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "next": "13.0.7",
@@ -19,8 +21,14 @@
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
+    "@types/node": "^18.11.17",
+    "@types/react": "18.0.26",
     "autoprefixer": "^10.4.13",
+    "nodemon": "^2.0.20",
     "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4"
+    "prisma": "^4.8.0",
+    "tailwindcss": "^3.2.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
