implemented prisma and postgres example

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:C299792458m%2Fs%21@localhost:5432/test0"
+API_KEY="g3Q3LBe5kj7v01s803k35kKfoyjk2H5wwbxE"
