--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@next/font": "13.0.7",
-    "@prisma/client": "^4.8.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "mongoose": "^6.8.2",
     "next": "13.0.7",
     "pseudo-events": "^1.0.6",
     "react": "18.2.0",
@@ -21,14 +22,9 @@
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
-    "@types/node": "^18.11.17",
-    "@types/react": "18.0.26",
     "autoprefixer": "^10.4.13",
     "nodemon": "^2.0.20",
     "postcss": "^8.4.20",
-    "prisma": "^4.8.0",
-    "tailwindcss": "^3.2.4",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "tailwindcss": "^3.2.4"
   }
 }
