added test env var

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 MONGODB_URI=mongodb+srv://chris-goldhammer:Q4rH8EVQ2fP3qb02@cluster0.spngzeg.mongodb.net/raven?retryWrites=true&w=majority
+TEST_VAR=hello
